--- a/web-tsu2/styles/scss/_animation.scss
+++ b/web-tsu2/styles/scss/_animation.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-.title, .newList,.ts-tit,.student_life, footer, .ty-title, .project, .ty-more, .ty-more-1,.ty-banner h2,.nav-list, .points i,.dean-img,.dean-say,.ty-training .in,.ty-connect img,.ty-connect p,.ty-guidance img,.ty-guidance .r,.ty-recruit, .ty-vocation,.ty-how-connect,.report-in .left,.report-in .right,.report-list,.ty-new-list a,.new-main p,.new-main img,.left-bar .time,.left-bar .share,.ty-new-list3 .list a,.teacher,.set-in .img,.set-in .zy,.ty-pro-list{
+.title, .newList,.ts-tit,.student_life, footer, .ty-title, .project, .ty-more, .ty-more-1,.ty-banner h2,.nav-list, .points i,.dean-img,.dean-say,.ty-training .in,.ty-connect img,.ty-connect p,.ty-guidance img,.ty-guidance .r,.ty-recruit, .ty-vocation,.ty-how-connect,.report-in .left,.report-in .right,.report-list,.ty-new-list a,.new-main p,.new-main img,.left-bar .time,.left-bar .share,.ty-new-list3 .list a,.teacher,.set-in .img,.set-in .zy,.ty-pro-list, .project-list li, .project-pic img, .project-pic .text, .apply-list .img{
 	opacity: 1;
 	transition: all .5s;
 	visibility: hidden;
