--- a/web-tsu2/styles/scss/_mobile.scss
+++ b/web-tsu2/styles/scss/_mobile.scss
@@ -87,7 +87,6 @@
         position: fixed;
         width: 100%;
         height: 100%;
-        background: rgba(18, 58, 88, .8);
         line-height: rem(50);
         z-index: 11;
         left: 0;
@@ -96,6 +95,8 @@
         border-top: 1px solid rgba(224, 224, 224, .95);
         padding: 5rem 0 0;
         margin-left: 0;
+        background-image: url(../images/color-bg.png);
+        background-size: 100% 100%;
 
         a {
           float: none;
@@ -117,8 +118,10 @@
         }
 
         .active {
-          background: rgba(184, 153, 115, 1);
+          background: rgba(255, 255, 255, .8);
           border-bottom: 0;
+          color: #a20026;
+          font-weight: bold;
         }
 
         .close {
@@ -155,34 +158,42 @@
         font-size: rem(50);
         box-sizing: border-box;
         background-size: 100% 100%;
-        color: rgba(171, 132, 85, 1);
+        background: linear-gradient(to right, #a4062b 20%, #691e9a);
+        -webkit-background-clip: text;
+        color: transparent;
       }
     }
 
     .carousel {
       .swiper-container {
         min-width: 100%;
-        height: 16rem;
+        height: rem(745);
 
         .swiper-slide {
           min-width: 100%;
 
           .center {
-            bottom: rem(70);
-            width: rem(400);
-            height: auto;
-            background-image: none;
-            font-size: rem(28);
-            color: rgba(255, 255, 255, 1);
-            line-height: rem(36);
-            padding: rem(10) rem(12);
-            left: 50%;
-            transform: translateX(-50%);
-            background: rgba(171, 132, 85, .8);
+            width: rem(600);
+            height: rem(246);
+            font-size: rem(32);
+            color: #333;
+            line-height: rem(50);
+            padding: rem(70) rem(50) 0;
+            box-sizing: border-box;
+            right: 0;
+            bottom: rem(95);
             border-bottom: 0;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
 
             &:after {
-              display: none;
+              width: rem(64);
+              height: rem(23);
+              right: rem(70);
+              bottom: rem(40);
             }
 
             span {
@@ -194,21 +205,11 @@
         }
 
         .left {
-          position: absolute;
-          top: auto;
-          bottom: 0;
-          width: rem(80);
-          height: rem(80);
-          background-size: 100% 100%;
+          display: none;
         }
 
         .right {
-          position: absolute;
-          top: auto;
-          bottom: 0;
-          width: rem(80);
-          height: rem(80);
-          background-size: 100% 100%;
+          display: none;
         }
 
         // 分页器
@@ -337,7 +338,6 @@
         .left {
           width: rem(56);
           height: rem(80);
-          background: url(../images/new_bg2.png) top left;
           padding: rem(12);
           margin-top: rem(5);
           text-align: center;
@@ -490,6 +490,20 @@
             height: rem(96);
             font-size: rem(18);
             line-height: rem(24);
+          }
+
+          &::after {
+            width: rem(160);
+            height: rem(9);
+            left: rem(32);
+            bottom: 0;
+          }
+
+          .to {
+            width: rem(50);
+            height: rem(18);
+            right: rem(40);
+            bottom: rem(30);
           }
         }
       }
@@ -662,8 +676,8 @@
   .ty-more-1 {
     font-size: rem(16);
     width: rem(200);
-        height: rem(60);
-        line-height: rem(60);
+    height: rem(60);
+    line-height: rem(60);
 
     &:hover {
       font-size: rem(18);
@@ -759,11 +773,12 @@
         margin: rem(65) auto 0;
       }
     }
+
     .text {
       width: rem(764/1.7);
       height: auto;
       padding: rem(65/1.7) rem(110/1.7) rem(10/1.7) rem(90/1.7);
-  
+
       &:after {
         width: rem(166);
         height: rem(7);
@@ -778,7 +793,8 @@
     position: relative;
 
     img {
-      width: 100%;
+      width: 90%;
+      margin: 0 auto 0 5%;
       height: auto;
     }
 
@@ -1060,8 +1076,9 @@
 
       img {
         display: block;
-        width: 100%;
+        width: 90%;
         height: auto;
+        margin: 0 0 0 5%;
       }
     }
 
@@ -1079,7 +1096,7 @@
         margin-bottom: rem(30);
         padding-top: rem(0);
       }
-  
+
       p {
         font-size: rem(18);
         line-height: rem(30);
@@ -1087,10 +1104,11 @@
         width: 100%;
       }
     }
+
     .ty-more {
       width: rem(380);
       margin: 0;
-  
+
       &:after {
         width: rem(48);
         height: rem(17);
@@ -1238,6 +1256,7 @@
       }
     }
   }
+
   .activity-more {
     width: rem(80);
     height: rem(23);
@@ -1251,47 +1270,48 @@
     min-width: 0;
     padding: rem(80) 0 0;
     margin: 0 auto;
-  
+
     .teacher-list {
       width: 100%;
       overflow: hidden;
       margin: 0 auto;
     }
-  
+
     ul {
       height: 100%;
       padding: rem(80) rem(15) 0;
     }
-  
+
     li {
-      float: left;
-      width: rem(260/1.7);
-      height: rem(348/1.7);
-      padding-right: rem(230/1.7);
-      margin-bottom: rem(60/1.7);
-      margin-right: rem(25/1.7);
-  
+      float: none;
+      width: rem(260);
+      height: rem(348);
+      padding-right: rem(230);
+      margin-bottom: rem(60);
+      margin-right: 0;
+      margin-left: rem(50);
+
       &:nth-child(3) {
-        margin-left: rem(0);
+        margin-left: rem(60);
       }
     }
-  
+
     .in {
-      width: rem(273/1.7);
-      height: rem(250/1.7);
-      top: rem(52/1.7);
-  
+      width: rem(300);
+      height: rem(250);
+      top: rem(52);
+
       h3 {
-        font-size: rem(18);
-        margin-bottom: rem(12/1.7);
-        padding: rem(12) 0 0 rem(60/1.7);
+        font-size: rem(36);
+        margin-bottom: rem(24);
+        padding: rem(24) 0 0 rem(60);
       }
-  
+
       p {
-        height: rem(20);
-        font-size: rem(14);
-        line-height: rem(20);
-        padding-left: rem(60/1.7);
+        height: auto;
+        font-size: rem(18);
+        line-height: rem(26);
+        padding-left: rem(60);
       }
     }
   }
@@ -1301,18 +1321,18 @@
     height: auto;
     width: 100%;
     overflow: visible;
-  
+
     .in {
       width: 100%;
       height: auto;
     }
-  
+
     img {
       width: 100%;
       height: auto;
       position: static;
     }
-  
+
     .text {
       position: relative;
       left: 1.5rem;
@@ -1322,20 +1342,20 @@
       height: auto;
       top: 0;
       margin: rem(-100) 0 0;
-  
+
       h3 {
         font-size: rem(24);
         line-height: rem(30);
         padding: rem(56) 0 rem(25);
       }
-  
+
       p {
         width: rem(440);
         font-size: rem(18);
         line-height: rem(26);
         text-indent: rem(28);
       }
-  
+
       &:after {
         width: rem(125);
         height: rem(8);
@@ -1349,25 +1369,26 @@
     padding: rem(38) 0;
     width: 100%;
     margin: 0 auto;
-  
+
     li {
+      float: none;
       display: block;
-      width: rem(540);
+      width: rem(515);
       height: rem(126);
       font-size: rem(20);
       line-height: rem(126);
-      padding: 0 rem(50);
+      padding: 0 rem(40);
       margin: 0 auto rem(20);
-  
+
       &:nth-child(even) {
         margin: 0 auto rem(20);
       }
-  
+
       a {
         line-height: rem(32);
         width: rem(350);
       }
-  
+
       &:after {
         width: rem(83);
         height: rem(23);
@@ -1382,13 +1403,13 @@
       img {
         left: 458px;
       }
-  
+
       .text {
         right: auto;
         left: 1.5rem;
         padding-left: rem(80);
         padding-right: 0;
-  
+
         &:after {
           left: rem(110);
         }
@@ -1398,20 +1419,20 @@
 
   .apply-list {
     padding-top: rem(50);
-  
+
     width: 100%;
     margin: 0 auto;
-  
+
     >ul>li {
       width: rem(388*1.5);
       margin: 0 auto rem(30);
       float: none;
-  
+
       img {
         width: rem(388*1.5);
         height: rem(254*1.5);
       }
-  
+
       .in {
         width: rem(332*1.5);
         padding-left: rem(28*1.5);
@@ -1419,21 +1440,21 @@
         font-size: rem(18*1.5);
         line-height: rem(45);
       }
-  
+
       h3 {
         font-size: rem(45);
         padding: rem(28*1.5) 0;
       }
-  
+
       p {
         width: rem(450);
         padding-left: rem(28*1.5);
       }
-  
+
       ul {
         padding-left: rem(28*1.5);
       }
-  
+
       &:after {
         width: rem(120*1.5);
         height: rem(7*1.5);
@@ -1454,17 +1475,17 @@
     width: 100%;
     min-width: 0;
     height: rem(700);
-  
+
     .ty-title {
       padding: rem(80) 0;
     }
-  
+
     p {
       width: rem(560);
       font-size: rem(18);
       line-height: rem(30);
       text-indent: rem(36);
-  
+
       &:after {
         margin: rem(80) auto 0;
         width: rem(166);
