--- a/web-tsu2/styles/scss/_ty.scss
+++ b/web-tsu2/styles/scss/_ty.scss
@@ -1157,15 +1157,22 @@ body .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-
     width: 556px;
     height: 370px;
     position: relative;
+    overflow: hidden;
 
     &:last-child {
       margin-right: 0;
+    }
+
+    &:hover img {
+      transform: scale(1.1);
     }
 
     img {
       display: block;
       height: 100%;
       width: 100%;
+      transition: all .3s;
+      
     }
 
     .in {
@@ -1307,6 +1314,12 @@ body .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-
     margin-right: 72px;
     position: relative;
     margin-bottom: 36px;
+    transition: all .3s;
+
+    &:hover {
+      box-shadow: 0 0 10px rgba(0, 0, 0, .15);
+      font-size: 32px;
+    }
 
     &:nth-child(even) {
       margin-right: 0;
@@ -1453,6 +1466,7 @@ body .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-
     position: relative;
     margin-bottom: 60px;
     margin-right: 50px;
+    overflow: hidden;
 
     &:nth-child(odd) {
       margin-right: 0;
@@ -1467,6 +1481,11 @@ body .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-
     display: block;
     width: 100%;
     height: 100%;
+    transition: all .3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   .in {
