--- a/web-nutrition/styles/scss/_ty.scss
+++ b/web-nutrition/styles/scss/_ty.scss
@@ -141,7 +141,7 @@ body {
         text-align: center;
         color: #fff;
 
-        &:last-child {
+        &:first-child {
             background: #fff;
             color: rgba(246, 127, 70, 1);
         }
@@ -252,9 +252,9 @@ body {
     }
 
     .img {
-        width: rem(120);
-        height: rem(200);
-        padding: 0 rem(12);
+        width: rem(100);
+        height: rem(195);
+        padding: 0 rem(22);
         position: relative;
     }
 
@@ -263,7 +263,7 @@ body {
         top: 50%;
         left: 50%;
         transform: translate3D(-50%, -50%, 0);
-        max-width: rem(120);
+        max-width: rem(100);
         max-height: rem(195);
     }
 
